[package]
name = "poll"
version = "0.1.0"
authors = ["Willy Aguirre <marti1125@gmail.com>"]

[dependencies]
rocket = "0.2.5"
rocket_codegen = "0.2.5"
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.8.0"
chrono = "0.3"

[dependencies.rocket_contrib]
version = "0.2.5"
default-features = false
features = ["json", "handlebars_templates", "tera_templates"]
