[package]
name = "poll"
version = "0.1.0"
authors = ["Willy Aguirre <marti1125@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
native-tls = "0.1.2"
openssl = "0.9.12"
postgres = { version = "0.14.1", features = ["with-native-tls"] }
dotenv = "0.8.0"
chrono = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2.8"
default-features = false
features = ["json", "handlebars_templates", "tera_templates"]

[dev-dependencies]
rocket = { version = "0.2.8", features = ["testing"] }
